# todo-list-react-django-flask

./: .gitignore  readme.md
flask-api/: curl.txt  pyproject.toml  requirements.txt
flask-api/backend/: db_session.py
flask-api/backend/alembic/: alembic.ini  notes.txt
flask-api/backend/alembic/migration/: env.py
flask-api/backend/alembic/migration/versions/: 1b18a1968c29_relationship_user_task_nullable.py  4fb7e6af49e1_init.py  88e2e03057b5_init.py  b9562473cbb1_relationship_user_task_nullable.py  c026da23d76b_relationship_user_task_nullable.py  c963b9fa03b8_add_relationship_user_with_task.py  dd2f16703511_init.py  e91fed8b299e_init.py  fc5534850b4c_relationship_user_task_nullable.py
flask-api/backend/auth/: auth.py
flask-api/backend/flask/: api_endpoints.py  app.py
flask-api/backend/flask/auth/: auth_controller.py  auth_jwt.py  decorator.py  send_email.py
flask-api/backend/flask/routes/: tasks_routes.py  users_routes.py
flask-api/backend/model/: __init__.py  refresh_token.py  task.py  user.py  users.py
flask-api/backend/modules/authentification/: lambda_handler.py  login_handler.py
flask-api/backend/repositories/: refresh_token_repository.py  task_repository.py  user_repository.py
flask-api/backend/test/: conftest.py  test_login.py  test_signup.py
flask-api/backend/test/funcionality/: test_login.py  test_signup.py
flask-api/backend/test/funcionality/auth/: resend_email.py  test_login.py  test_refresh.py  test_signup.py  test_verification.py
flask-api/backend/test/funcionality/tasks/: test_tasks.py
flask-api/docker/: docker-compose.yml
(+41 files in other folders)
