
[tool.poetry]
name = "todo-list"
version = "0.1.0"
description = "api todo_list on flask"
authors = ["Samuel Jauregui <samjaurz_@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
alembic = "^1.16.4"
flask = "^3.1.1"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.42"
pytest = "^8.4.1"
pyjwt = "^2.10.1"
flask-cors = "^6.0.1"
bcrypt = "^4.3.0"
flasgger = "^0.9.7.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"